# flatmachines

./: .gitignore  AGENTS.md  README.md  flatmachine.d.ts  todos.txt
.tickets/: fla-w11m.md  ftj-5umd.md  ftj-jki0.md
assets/: flatagent.d.ts  flatagents-runtime.d.ts  prompt.d.ts
docs/plans/: opencode-plugin-architecture.md  opencode-plugin-publish-checklist.md  opencode-plugin-rollout.md
scripts/: update-spec-versions.sh
sdk/examples/iterated_prisoners_dilemma_controller/: PLAN.md  README.md
sdk/examples/iterated_prisoners_dilemma_controller/config/: agent.yml  match_machine.yml  player_machine.yml  profiles.yml
sdk/examples/iterated_prisoners_dilemma_controller/python/: README.md  pyproject.toml  run.sh
sdk/examples/iterated_prisoners_dilemma_controller/python/src/ipd_controller/: __init__.py  hooks.py  main.py
sdk/examples/opencode_global_local/: README.md
sdk/examples/opencode_plugin/: README.md  machine.yml
sdk/examples/opencode_plugin/.opencode/: package.json
sdk/js/: package-lock.json  package.json  vitest.config.ts
sdk/js/scripts/: setup-opencode-global-local.mjs  verify-opencode-plugin-package.mjs
sdk/js/tests/unit/: opencode-plugin.test.ts
sdk/python/flatagents/: AGENTS.md  README.md  pyproject.toml
sdk/python/flatagents/flatagents/: __init__.py  flatagent.py  tool_loop.py
sdk/python/flatmachines/: MACHINES.md  README.md  pyproject.toml
sdk/python/flatmachines/flatmachines/: __init__.py  flatmachine.py
sdk/python/tests/unit/: test_claude_code_adapter.py  test_flatagent_post_history.py  test_sqlite_persistence_config.py  (+1 more)
(+10 files in other folders)
