[project]
name = "ipd_controller"
version = "0.1.0"
description = "Iterated Prisoner's Dilemma with agent-controlled machine transitions"
dependencies = ["flatmachines[flatagents]", "flatagents"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
ipd-controller-demo = "ipd_controller.main:main"
